--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -141,7 +141,7 @@ $description-color: $font-secondary-color;
       // box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.12);
     }
 
-    &.me-card--active{
+    &.me-card--active {
       //transform: scale(2, 2);
       //background: white !important;
       //z-index: 2;
@@ -203,18 +203,18 @@ $description-color: $font-secondary-color;
       min-height: 30vh;
       justify-content: space-between;
     }
-    
+
     & .me-card__primary-section, .me-card__secondary-section {
       row-gap: 12px;
       display: grid;
     }
-    
-    
+
+
     & .me-card__primary-section {
       color: $font-secondary-color;
       font-size: 17px;
     }
-    
+
     & .me-card__secondary-section {
       color: $font-tertiary-color;
       font-size: 14px;
@@ -228,6 +228,8 @@ $description-color: $font-secondary-color;
       padding: 12px 0;
       font-weight: 600;
       cursor: pointer;
+      position: absolute;
+      bottom: 0;
       @include mdc-layout-grid-media-query_("phone") {
         border: unset;
       }
