--- a/web/app/views/feeds/_filter.html.erb
+++ b/web/app/views/feeds/_filter.html.erb
@@ -6,10 +6,10 @@
     <i class="material-icons">
       <%= icon_type %>
     </i>
-  <% filters_that_exist_in_events.each do |filter| %>
+  <% Array(filters_that_exist_in_events).each do |filter| %>
     <% if type == 'ocurrences' %>
-      <div data-target="chip.chip" data-action="click->chip#select" data-chip-value="<%= filter['original'] %>"
-           class="me-chip mdc-chip <%= params_filters and params_filters.include?(filter['original'].to_s) ? 'mdc-chip--selected' : nil %>"
+      <div data-target="chip.chip" data-action="click->chip#select" data-chip-value="<%= filter['string'] %>"
+           class="me-chip mdc-chip <%= params_filters and filter_exist_in_ocurrences?(params_filters, filter['string']) ? 'mdc-chip--selected' : nil %>"
            data-turbolinks-scroll="false">
         <div class="mdc-chip__checkmark">
           <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
@@ -17,12 +17,12 @@
           </svg>
         </div>
         <div class="mdc-chip__text">
-          <%= filter['formatted'].try(:capitalize) %>
+          <%= filter['decorator'].try(:capitalize) %>
         </div>
       </div>
     <% else %>
       <div data-target="chip.chip" data-action="click->chip#select" data-chip-value="<%= filter %>"
-           class="me-chip mdc-chip <%= params_filters and params_filters.include?(filter) ? 'mdc-chip--selected' : nil %>"
+           class="me-chip mdc-chip <%= params_filters.try(:to_s) and params_filters.include?(filter) ? 'mdc-chip--selected' : nil %>"
            data-turbolinks-scroll="false">
         <div class="mdc-chip__checkmark">
           <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
