Refactor in associations and adjusts * add morphdom * add flip animation in section * add system of follow features

--- a/web/app/assets/stylesheets/components/me-feed.scss
+++ b/web/app/assets/stylesheets/components/me-feed.scss
@@ -28,6 +28,7 @@ $mdc-layout-grid-columns: (
     & .me-filter {
       display: block;
       margin: 16px 0;
+      min-height: 90px;
     }
 
     & .me-feed__divider {
