--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -48,16 +48,10 @@ $description-color: $font-secondary-color;
     max-width: 80%;
   }
 
-  &__title {
-  }
-
-  &__place {
-  }
-
-  &__category {
-  }
-
-  &__date {
+  &__organizer {
+    a {
+      text-decoration: none;
+    }
   }
 
   &__like-button {
@@ -74,6 +68,7 @@ $description-color: $font-secondary-color;
     background: none;
     position: relative;
     margin: 0 0 25px 0;
+    //transition: all 1s ease;
     @include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
 
     @include mdc-layout-grid-media-query_("phone") {
@@ -88,12 +83,6 @@ $description-color: $font-secondary-color;
       position: absolute;
       border-radius: 6px;
       transform: scale(1.1, 1.1);
-    }
-
-    &__place {
-    }
-
-    &__date {
     }
 
     & .mdc-typography--headline1 {
@@ -136,8 +125,8 @@ $description-color: $font-secondary-color;
 
     & .mdc-card__media {
       //transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-      opacity: 0.75;
-      transition: opacity 0.2s ease;
+      //opacity: 0.75;
+      //transition: opacity 0.2s ease;
       // box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.12);
     }
 
@@ -156,36 +145,60 @@ $description-color: $font-secondary-color;
 
     &:hover {
       & .mdc-card__media {
-        opacity: 1;
+        //opacity: 1;
       }
     }
   }
 
   &--single {
     margin: 35px 0;
+    font-size: 16px;
+    line-height: 1.4em;
     border-radius: 20px;
     overflow: hidden;
 
-    & a {
-      text-decoration: underline;
-      color: $link-color;
+    & .me-card__name, .me-card__place, .me-card__ocurrence, .me-card__description {
+      padding: 12px 0;
     }
 
-    .me-card__like-button {
+    & .me-card__organizer {
+      & .mdc-chip-set {
+        padding: 0px;
+        margin: 0 -4px;
+      }
+
+      & .mdc-chip__text {
+        font-size: 12px;
+      }
+    }
+
+    & .me-card__content {
+      padding: 0.5rem 1rem 1rem 1em;
+    }
+
+    & .me-card__like-button {
       bottom: -22px;
       right: 16px;
       position: absolute;
     }
 
-    .me-card__primary {
+    & .me-card__primary {
       padding: 2.5rem 1rem 1rem;
     }
 
-    .mdc-fab {
+    & .me-card__description {
+
+      & a {
+        text-decoration: underline;
+        color: $link-color;
+      }
+    }
+
+    & .mdc-fab {
       @include mdc-fab-container-color($brand-color);
     }
 
-    .mdc-typography--body2 {
+    & .mdc-typography--body2 {
       font-weight: 400;
       padding: 0 16px 16px;
       font-family: Cabin;
