--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -1,57 +1,65 @@
-<div class="me-favorite" data-controller="favorite" data-target="favorite.saves">
+<div id="saves" class="me-favorite" data-controller="favorite" data-target="favorite.saves">
   <% if current_user and !current_user.taste_events_saved.empty? %>
-  <h3 data-target="favorite.header" class="mdc-typography--headline6">
-    Eventos salvos
-  </h3>
-  <div class="me-icon__group">
-    <div data-target="favorite.scrollLeft" data-action="click->favorite#scrollLeft"
-         class="me-icon me-icon--scroll-left me-icon--off">
-      <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon"
-           style="pointer-events: none; display: block; width: 100%; height: 100%;">
-        <g class="style-scope iron-icon">
-          <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" class="style-scope iron-icon"></path>
-        </g>
-      </svg>
-    </div>
-    <div data-target="favorite.scrollRight" data-action="click->favorite#scrollRight"
-         class="me-icon me-icon--scroll-right me-icon--off">
-      <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon"
-           style="pointer-events: none; display: block; width: 100%; height: 100%;">
-        <g class="style-scope iron-icon">
-          <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z" class="style-scope iron-icon"></path>
-        </g>
-      </svg>
-    </div>
-  </div>
-  <div data-target="favorite.list" class="me-favorite__list mdc-layout-grid">
-    <div class="mdc-layout-grid__inner">
-      <% favorited_events.each do |event| %>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-        <div data-controller="favorite-events" data-target="favorite-events.event"
-             data-action="mouseover->favorite-events#showEventDetails" class="me-card mdc-card event-<%= event.id %>"
-             data-favorite-events-identifier="<%= event.id %>">
-          <div data-target="favorite-events.remove" data-action="click->favorite-events#remove" class="me-card__remove">
-            <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet" focusable="false">
-              <path
-                d="m55.7 52.7c6.2 6.7 12.4 13.5 18.6 20.2 2.2 2.4-1.4 5.9-3.5 3.5-6.2-6.7-12.3-13.4-18.5-20.1-6.1 6.8-12.3 13.4-18.4 20.1-2.2 2.4-5.7-1.2-3.5-3.5 6.2-6.7 12.4-13.5 18.6-20.2-6.2-6.7-12.4-13.5-18.6-20.2-2.2-2.4 1.4-5.9 3.5-3.5 6.1 6.6 12.3 13.3 18.4 20 6.2-6.7 12.3-13.4 18.5-20.1 2.2-2.4 5.7 1.2 3.5 3.5-6.2 6.8-12.4 13.5-18.6 20.3z"/>
-              </svg>
-          </div>
-          <a href="<%= event.url %>">
-            <div class="mdc-card__media mdc-card__media--16-9" style="<%= get_image_style_attr event %>">
-              <div data-target="favorite-events.overlay" class="me-card__overlay mdc-ripple-surface	"></div>
-            </div>
-            <div class="me-card__date" data-target="favorite-events.date">
-              <%= event.day_of_week['decorator'] %>
-            </div>
-            <div class="me-card__title mdc-card__title" data-target="favorite-events.title">
-              <%= limit_name_size event.details_name, 30 %>
-            </div>
-          </a>
-        </div>
+    <h3 data-target="favorite.header" class="mdc-typography--headline6">
+      Eventos salvos
+    </h3>
+    <div class="me-icon__group">
+      <div data-target="favorite.scrollLeft" data-action="click->favorite#scrollLeft"
+           class="me-icon me-icon--scroll-left me-icon--off">
+        <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon"
+             style="pointer-events: none; display: block; width: 100%; height: 100%;">
+          <g class="style-scope iron-icon">
+            <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" class="style-scope iron-icon"></path>
+          </g>
+        </svg>
       </div>
-      <% end %>
+      <div class="me-icon me-icon--scroll-right me-icon--off"
+           data-action="click->favorite#scrollRight"
+           data-target="favorite.scrollRight">
+        <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon"
+             style="pointer-events: none; display: block; width: 100%; height: 100%;">
+          <g class="style-scope iron-icon">
+            <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z" class="style-scope iron-icon"></path>
+          </g>
+        </svg>
+      </div>
     </div>
-  </div>
+    <div class="me-favorite__list mdc-layout-grid"
+         data-target="favorite.list">
+      <div class="mdc-layout-grid__inner">
+        <% favorited_events.each do |event| %>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+            <div class="me-card mdc-card me-card--saves event-<%= event.id %>"
+                 data-action="mouseover->favorite-events#showEventDetails"
+                 data-controller="favorite-events"
+                 data-favorite-events-identifier="<%= event.id %>"
+                 data-saves-flip-key="<%= "saves-#{dom_id event}" %>"
+                 data-target="favorite-events.event">
+              <div class="me-card__remove"
+                   data-action="click->favorite-events#remove"
+                   data-target="favorite-events.remove">
+                <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet" focusable="false">
+                  <path
+                    d="m55.7 52.7c6.2 6.7 12.4 13.5 18.6 20.2 2.2 2.4-1.4 5.9-3.5 3.5-6.2-6.7-12.3-13.4-18.5-20.1-6.1 6.8-12.3 13.4-18.4 20.1-2.2 2.4-5.7-1.2-3.5-3.5 6.2-6.7 12.4-13.5 18.6-20.2-6.2-6.7-12.4-13.5-18.6-20.2-2.2-2.4 1.4-5.9 3.5-3.5 6.1 6.6 12.3 13.3 18.4 20 6.2-6.7 12.3-13.4 18.5-20.1 2.2-2.4 5.7 1.2 3.5 3.5-6.2 6.8-12.4 13.5-18.6 20.3z"></path>
+                </svg>
+              </div>
+              <a href="<%= event.url %>">
+                <div class="me-card__date" data-target="favorite-events.date">
+                  <%= event.day_of_week['decorator'] %>
+                </div>
+                <div class="mdc-card__media mdc-card__media--16-9" style="<%= get_image_style_attr event %>">
+                  <div class="me-card__overlay"
+                       data-target="favorite-events.overlay"></div>
+                </div>
+                <div class="me-card__title mdc-card__title" data-target="favorite-events.title">
+                  <%= limit_name_size event.details_name, 30 %>
+                </div>
+              </a>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
 
   <% end %>
 </div>
