--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
 
 <section id=<%= @locals[:identifier] %>>
-      <%= render partial: "feeds/section", locals: @locals %>
+      <%= render partial: "components/collection/collection", locals: @locals %>
 </section>
