--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -1,4 +1,5 @@
 @import "@material/fab/_mixins";
+@import '@material/icon-button/_mixins';
 @import "../_variables";
 
 $name-color: $font-primary-color;
@@ -6,10 +7,45 @@ $description-color: $font-secondary-color;
 
 .me-card {
   position: relative;
+  will-change: opacity, transform;
+
+  &[data-event-similar-open="true"], &[data-event-similar-open="true"]:hover {
+    //transform: scale(0.9);
+    //transform-origin: center;
+
+    & .me-card__secondary-section a {
+      color: $brand-color
+    ;
+    }
+
+    & .me-card__similar {
+      transform: translate(0px, 15px) scale(1.5);
+      opacity: 1;
+      color: $brand-color;
+    }
+  }
+
+  &[data-event-similar-open="true"]::before {
+    //background: darken($surface-color, 3%);
+    //height: 100%;
+    //width: 100%;
+    //content: close-quote;
+    //position: absolute;
+    //transform: scale(1.05);
+    //transform-origin: center;
+    //top: 0;
+    //left: 0;
+    //z-index: -1;
+    //border-radius: 13px;
+    //box-shadow: 0 0 1px 0 darken($surface-color, 6%);
+  }
+
+  &::before {
+    transition: transform 0.4s ease;
+  }
 
   &:hover {
-    & .me-card__overlay {
-    }
+
   }
 
   &__overlay {
@@ -25,12 +61,17 @@ $description-color: $font-secondary-color;
     @include mdc-states;
   }
 
+  &__section {
+    padding: 0 0 0 5px;
+  }
+
   &__primary-section {
     color: $font-secondary-color;
     text-transform: uppercase;
     font-size: 11px;
     margin: 8px 0 0 0px;
     font-weight: 800;
+    @extend .me-card__section;
   }
 
   &__secondary-section {
@@ -38,6 +79,7 @@ $description-color: $font-secondary-color;
     font-size: 15px;
     margin: 3px 0 0 0px;
     font-weight: 500;
+    @extend .me-card__section;
   }
 
   &__tertiary-section {
@@ -46,6 +88,7 @@ $description-color: $font-secondary-color;
     margin: 3px 0 0 0px;
     font-weight: 200;
     max-width: 80%;
+    @extend .me-card__section;
   }
 
   &__organizer {
@@ -54,10 +97,26 @@ $description-color: $font-secondary-color;
     }
   }
 
+  &__similar {
+    text-align: center;
+    align-self: center;
+    cursor: pointer;
+    color: $font-tertiary-color;
+    min-height: 28px;
+    opacity: 0;
+    transition: opacity 0.15s ease, transform 0.15s ease-in;
+    transform: translate(0px, -10px);
+
+    &:hover {
+      color: $brand-color;
+    }
+  }
+
   &__like-button {
     position: absolute;
-    bottom: -6px;
-    right: 0;
+    top: 75px;
+    right: 8px;
+    z-index: 2;
   }
 
   &--feed {
@@ -65,24 +124,49 @@ $description-color: $font-secondary-color;
     font-size: 14px;
     border: 0;
     box-shadow: none;
-    background: none;
+    background: $surface-color;
     position: relative;
     margin: 0 0 25px 0;
-    //transition: all 1s ease;
+
+    &:hover {
+      & .me-card__similar {
+        opacity: 1;
+        transform: translate(0px, 0px);
+      }
+    }
+
     @include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
 
     @include mdc-layout-grid-media-query_("phone") {
       min-height: 165px;
     }
 
-    &-is-saved {
-      content: close-quote;
-      background: #63d0841a;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      border-radius: 6px;
-      transform: scale(1.1, 1.1);
+    & .me-icon-button.mdc-icon-button {
+      display: none;
+      background: $surface-color;
+      transition: 0.2s all ease 0s;
+      border-radius: 100%;
+      @include mdc-icon-button-ink-color($color: $icon-light-color);
+      @include mdc-icon-button-size($width: 26px, $height: 26px, $padding: 4px);
+
+      @include mdc-layout-grid-media-query_("phone") {
+        @include mdc-icon-button-ink-color($color: $icon-light-color);
+        @include mdc-icon-button-size($width: 26px, $height: 26px, $padding: 4px);
+        background: none;
+      }
+
+      &:hover {
+      }
+
+      &--on {
+        @include mdc-icon-button-ink-color($color: $brand-color);
+      }
+
+      & .material-icons-sharp {
+        //font-size: 30px;
+        background: $surface-color;
+        border-radius: 100%;
+      }
     }
 
     & .mdc-typography--headline1 {
@@ -124,10 +208,12 @@ $description-color: $font-secondary-color;
     }
 
     & .mdc-card__media {
-      //transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-      //opacity: 0.75;
-      //transition: opacity 0.2s ease;
-      // box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.12);
+      transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+      box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.12);
+
+      &:hover {
+        box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.24);
+      }
     }
 
     &.me-card--active {
@@ -191,6 +277,32 @@ $description-color: $font-secondary-color;
       & a {
         text-decoration: underline;
         color: $link-color;
+      }
+    }
+
+    & .me-icon-button {
+
+      &.mdc-icon-button {
+        background: $icon-background-color;
+        transition: 0.2s all ease 0s;
+        border-radius: 100%;
+        @include mdc-icon-button-ink-color($color: $icon-light-color);
+        @include mdc-icon-button-size($width: 38px, $height: 38px, $padding: 6px);
+        @include mdc-elevation($z-value: 4);
+
+        &:hover {
+          @include mdc-elevation($z-value: 2);
+        }
+
+        &--on {
+          background: $icon-background-color;
+          @include mdc-icon-button-ink-color($color: $brand-color);
+          @include mdc-elevation($z-value: 2);
+        }
+
+        & .material-icons-sharp {
+          font-size: 38px;
+        }
       }
     }
 
@@ -269,7 +381,8 @@ $description-color: $font-secondary-color;
   }
 
   & .mdc-card__media {
-    border-radius: 2px;
+    border-radius: 5px;
+    overflow: hidden;
   }
 
   & .mdc-card__actions {
