--- a/web/app/assets/stylesheets/components/me-feed.scss
+++ b/web/app/assets/stylesheets/components/me-feed.scss
@@ -7,7 +7,7 @@ $name-color: $font-primary-color;
 $description-color: $font-secondary-color;
 
 $mdc-layout-grid-columns: (
-  desktop: 15,
+  desktop: 12,
   tablet: 18,
   phone: 8
 );
@@ -15,7 +15,8 @@ $mdc-layout-grid-columns: (
 .me-feed {
 
   &__section {
-    margin: 0 0 35px 0;
+    margin: 0 0 125px 0;
+    //min-height: 700px;
 
     @include mdc-layout-grid-media-query_("phone") {
       margin: 0;
@@ -23,18 +24,27 @@ $mdc-layout-grid-columns: (
 
     & .mdc-typography--headline4 {
       margin: 12px 0;
+      font-weight: 800;
     }
 
     & .me-filter {
       display: block;
-      margin: 16px 0;
-      min-height: 90px;
+      margin: 12px 0;
+      //min-height: 90px;
     }
 
     & .me-feed__divider {
       margin: 0;
     }
-  
+
+  }
+
+  &__load-more {
+
+    & .mdc-button {
+      font-family: $font-secondary-font;
+      font-size: 12px;
+    }
   }
 
   &__divider {
@@ -54,10 +64,10 @@ $mdc-layout-grid-columns: (
   }
 
   & .me-chip-set {
-    margin: 2px 0 6px 0;
+    //margin: 2px 0 6px 0;
     //background: #f9f9f9;
-    border-radius: 3px;
-    display: inline;
+    //border-radius: 3px;
+    //display: inline;
   }
   
 
