--- a/web/app/assets/stylesheets/components/me-filter.scss
+++ b/web/app/assets/stylesheets/components/me-filter.scss
@@ -17,14 +17,18 @@
   }
 
   & .mdc-chip-set {
+    display: block;
+    padding: 3px 0;
 
     & .material-icons {
       vertical-align: middle;
-      padding: 0 6px 0 16px;
+      padding: 0 6px 0 0;
+      color: $font-tertiary-color;
+      display: none;
     }
 
     & .mdc-chip {
-      margin: 4px 0;
+      margin: 2px 0;
       @include mdc-layout-grid-media-query_("phone") {
         margin: 4px;
       }
@@ -51,15 +55,16 @@
     font-weight: 400;
     font-size: 10px;
     text-transform: uppercase;
+    transition: $chip-transition;
     @include mdc-layout-grid-media-query_("phone") {
       border: unset;
     }
   }
 
   & .mdc-chip--selected {
-    color: $font-primary-color;
-    background-color: $brand-color;
-    border: 1px solid $brand-color;
+    color: $chip-font-color;
+    background-color: $chip-background-color;
+    border: 1px solid $chip-border-color;
     @include mdc-layout-grid-media-query_("phone") {
       border: unset;
     }
