--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -43,7 +43,7 @@
 
 <div class="me-feed">
   <% if params[:q] %>
-    <%= render partial: "section",
+    <%= render partial: "components/collection/collection",
                locals:  {
                    items:      @items[:user],
                    titles:     {
@@ -58,7 +58,7 @@
     <%#= render partial: "section", locals: {items: @items[:categories], titles: {categories: "Eventos nas categorias", occurences: "acontecendo"}, identifier: 'categorias', type: :large, filters: {personas: false, categories: true, ocurrences: true}} if @items[:categories] %>
   <% else %>
     <section>
-      <%= render partial: "section",
+      <%= render partial: "components/collection/collection",
                  locals:  {
                      items:      @items[:today],
                      titles:     {
@@ -69,39 +69,12 @@
                      filters:    {
                          categories: true,
                          kinds:      true
-                     }
-                 } %>
-    </section>
-    <section>
-      <%#= render partial: "section",
-                 locals:  {
-                     items:      @items[:cinema],
-                     titles:     {
-                         principal: "Cinema nesta semana"
                      },
-                     identifier: 'cinema',
-                     type:       :large,
-                     filters:    {
-                         ocurrences: true
-                     }
+                     detail:     @items[:today][:detail]
                  } %>
     </section>
     <section>
-      <%#= render partial: "section",
-                 locals:  {
-                     items:      @items[:show_and_party],
-                     titles:     {
-                         principal: "Shows e festa no mês"
-                     },
-                     identifier: 'show-and-party',
-                     type:       :large,
-                     filters:     {
-                         ocurrences: true
-                     }
-                 } %>
-    </section>
-    <section>
-      <%= render partial: "section",
+      <%= render partial: "components/collection/collection",
                  locals:  {
                      items:      @items[:follow],
                      titles:     {
@@ -113,11 +86,12 @@
                          categories: true,
                          ocurrences: true,
                          kinds:      true
-                     }
+                     },
+                     detail:     @items[:follow][:detail]
                  } %>
     </section>
     <section>
-      <%= render partial: "section",
+      <%= render partial: "components/collection/collection",
                  locals:  {
                      items:      @items[:user_personas],
                      titles:     {
@@ -129,8 +103,10 @@
                          categories: true,
                          ocurrences: true,
                          kinds:      true
-                     }
+                     },
+                     detail:     @items[:user_personas][:detail]
                  } %>
+
     </section>
     <%# render partial: "section", locals: { events: @events[:user], titles: {categories: "Eventos nas categorias", occurences: "acontecendo"}, identifier: 'recomendados', type: :large, filters: { categories: true, occurences: true } } %>
   <% end %>
