--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%#= stylesheet_link_tag request.protocol + request.host + (ENV['IS_DOCKER'] == 'true' ? "/bot/css/embed.css" : ":3030/css/embed.css"), 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet"
-    href="https://fonts.googleapis.com/icon?family=Cabin:400,500,600,700|Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp">
+    href="https://fonts.googleapis.com/icon?family=Cabin:400,500,600,700|Roboto:300,400,700|Material+Icons|Material+Icons+Round|Material+Icons+Sharp">
     <%= Gon::Base.render_data %>
     <%#= javascript_include_tag request.protocol + request.host + (ENV['IS_DOCKER'] == 'true' ? "/bot/embed.js" : ":3030/embed.js"), defer: true %>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js'
